--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -72,7 +72,7 @@ body {
 
 /*
   * Navbar
-  */
+*/
 
 .navbar-brand {
   padding-top: .75rem;
@@ -97,4 +97,27 @@ body {
 .form-control-dark:focus {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+}
+
+/*
+  * post view
+*/
+
+
+textarea, .editInput {
+  padding: 3px 5px;
+  width: 100%;
+  border-style: none;
+  border: 2px solid rgba(0,0,0,0.25);
+  border-radius: 5px;
+}
+
+#tinyMCE {
+  min-height: 200px;
+  height: 500px;
+  max-height: 800px;
+}
+
+input:hover {
+  border: 2px solid rgba(0,0,0,0.6);
 }
