--- a/public/css/adminConnexion.css
+++ b/public/css/adminConnexion.css
@@ -14,7 +14,7 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 
-button {
+.buttonconnexion {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -24,7 +24,7 @@ button {
     width: 100%;
 }
 
-button:hover {
+.buttonconnexion:hover {
     opacity: 0.8;
 }
 
