--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,5 +1,14 @@
+.h1Page {
+    width: 800px;
+    margin: auto;
+}
+
+.h1Page h1 {
+    text-align: center;
+}
+
 .postContainer {
-    max-width: 1000px;
+    max-width: 1200px;
     width: 100%;
     border: 2px solid rgba(0, 0, 0, 0.4);;
     border-radius: 10px;
@@ -15,11 +24,26 @@
     text-decoration: none;
 }
 
-.buttonVoirLaSuite {
-    border: 1 solid rgba(0, 0, 0, 0.3);
+.buttonVoirLaSuite, .buttonVoirLaSuite span {
     border-radius: 5px;
-    background-color: white;
-    padding: 3px;
+    height: 30px;
+    width: 100px;
+}
+
+.buttonVoirLaSuite {
     float: right;
-    margin: -13px 0 0 0;
+    margin: -10px 0 0 0;
+    background-color: #4d85ff;
+}
+
+.buttonVoirLaSuite span {
+    color: white;
+    display: block;
+    padding-top: 3px;
+    text-align: center;
+}
+
+.buttonVoirLaSuite:hover {
+    background: #3374ff;
+    cursor: pointer;
 }
