--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,3 +1,12 @@
 body {
-    background-color: rgba(0, 0, 0, 0.1)
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+footer {
+    height: 200px;
+    background-color: rgba(52,58,64,1);
+}
+
+footer p {
+    color: rgba(255,255,255,0.7);
 }
