--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,12 +1,159 @@
 body {
     background-color: rgba(0, 0, 0, 0.1);
+    padding: 100px 0 0 0;
+}
+
+div.mobileMyNavMenu {
+    margin: 10px 0 0 0;
+    display: none;
+    cursor: pointer;
+}
+
+.menuNavbar {
+    background-color: #d9d9d9;
+    overflow: hidden;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    height: 80px;
+    width: 100%;
+    padding: 15px 30px 0 30px;
+    box-shadow: 0 0 2px 0 black;
+}
+
+.menuNavbar > a {
+    font-size: 25px;
+    color: #567adc;
+    font-weight: 525;
+}
+
+.menuNavbar div {
+    float: right;
+}
+
+.menuNavbar div li:not(:first-child){
+    margin: 0 0 0 60px;;
+}
+
+.menuNavbar div li a{
+    font-size: 20px;
+    color: #567adc;
+}
+
+.menuNavbar div li a:hover{
+    border-bottom: 2px solid rgba(43, 95, 163, 0.8);
+    color: #2b58d4;
+}
+
+.h1 {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.lignesoush1 {
+    width: 300px;
+    position: relative;
+    margin: 40px auto 40px auto;;
+    border-bottom: 2px solid rgba(41, 84, 201, 0.3);
+    z-index: 0;
+}
+
+.rondh1bleu {
+    width: 15px;
+    height: 15px;
+    background-color: rgba(0, 0, 150, 0.4);
+    border: 3px solid rgba(92, 173, 211, 0.3);
+}
+
+.lignesoush1 .left {
+    bottom: -15px;
+    left: -15px;
+    border-radius: 50% 0 50% 0;
+    position: absolute;
+}
+
+.lignesoush1 .topLeft {
+    bottom: 0px;
+    left: 300px;
+    border-radius: 50% 0 50% 0;
+    position: absolute;
+}
+
+.lignesoush1 .right {
+    bottom: -15px;
+    left: 300px;
+    border-radius: 0 50% 0 50%;
+    position: absolute;
+}
+
+.lignesoush1 .topRight {
+    bottom: 0px;
+    left: -15px;
+    border-radius: 0 50% 0 50%;
+    position: absolute;
 }
 
 footer {
-    height: 200px;
-    background-color: rgba(52,58,64,1);
+    text-align: center;
+    margin: 30px 0 0 0;
+    padding-top: 12px;
+    height: 50px;
+    border-top: 1px solid rgba(0,0,0,0.2) ;
 }
 
 footer p {
-    color: rgba(255,255,255,0.7);
+    color: rgba(0,0,0,0.7);
+}
+
+
+@media screen and (max-width: 770px) {
+
+    #myNavMenu {
+        display: none;
+    }
+
+    #myNavMenu  ul{
+        display: block;
+    }
+
+    div.mobileMyNavMenu  {
+        position: fixed;
+        top: 8px;
+        right: 10px;
+        display: inline-block;
+        color: rgba(0,0,0,0.7);
+    }
+
+    .menuNavbar {
+        background-color: #d9d9d9;
+        overflow: hidden;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        height: 80px;
+        width: 100%;
+        padding: 15px 30px 0 30px;
+        box-shadow: 0 0 2px 0 black;
+    }
+
+    .menuNavbar {
+        height: auto;
+        padding: 10px;
+    }
+
+    .navbar-nav {
+        display: block;
+    }
+
+    .menuNavbar div {
+        float: none;
+    }
+
+    .menuNavbar div li a:hover {
+        border: none;
+    }
+
+    .menuNavbar div li:not(:first-child) {
+        margin: 0;
+    }
 }
