--- a/public/css/front/apropos.css
+++ b/public/css/front/apropos.css
@@ -24,7 +24,7 @@ section#apropos div p{
 
 section#apropos h2 {
     color: rgba(0, 40, 100, 0.6);
-    padding: 0 10px;
+    margin: 20px 0;
 }
 
 @media screen and (max-width: 1420px) {
