--- a/public/css/front/blog.css
+++ b/public/css/front/blog.css
@@ -41,6 +41,15 @@
     font-weight: 525;
 }
 
+.postContainer .postContent p{
+    background-color: transparent!important;
+    margin-top: 0px;
+    margin-bottom: 0px!important;
+    text-align: left!important;
+    color: #000000;
+    font-family: 'Open Sans', Arial, sans-serif;
+}
+
 .postContainer .postInfo{
     margin: 0 30px 0 0;
 }
